Add in another paper to website and add google analytics tag

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,12 +11,12 @@
   {%- endif -%}
   -->
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-39507970-1"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-283MCFHKY7"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-  
-    gtag('config', 'UA-39507970-1');
+
+    gtag('config', 'G-283MCFHKY7');
   </script>
 </head>
