Add in formatting fix to publication html

--- a/_layouts/pub.html
+++ b/_layouts/pub.html
@@ -13,7 +13,8 @@ tags: publication
 
   {{pub.venue}}, {{pub.month}} {{pub.year}}
   {% if pub.award %}
-    <i><b>{{ pub.award }}</b></i>
+    <br/>
+    <span style="color:#0096FF"><b>{{ pub.award }}</b></span>
   {%- endif -%}
   <br/>
   <br/>
