Update website talks, publications, pdf icon, and favicon

--- a/_layouts/pub.html
+++ b/_layouts/pub.html
@@ -30,7 +30,8 @@ tags: publication
 
     {% if pub.pdf %}
     <h2>Article</h2>
-    <p><a href="{{ pub.pdf }}"><img src="/assets/pdf.png" alt="pdf"/></a></p>
+    <p><a href="{{ pub.pdf }}"><img src="/assets/PDF_icon.svg" width=64 alt= "pdf"></a></p>
+
     {%- endif -%} 
 
     {% if pub.appendix %}
