--- a/_layouts/pub.html
+++ b/_layouts/pub.html
@@ -36,7 +36,7 @@ tags: publication
 
     {% if pub.appendix %}
     <h2>Appendix</h2>
-    <p><a href="{{ pub.appendix }}"><img src="/assets/pdf.png" alt="pdf"/></a></p>
+    <p><a href="{{ pub.appendix }}"><img src="/assets/PDF_icon.svg" width=64 alt="pdf"/></a></p>
     {%- endif -%} 
 
     {%- if pub.embeddedmovie -%}
