--- a/_layouts/pub.html
+++ b/_layouts/pub.html
@@ -39,6 +39,11 @@ tags: publication
     <p><a href="{{ pub.appendix }}"><img src="/assets/PDF_icon.svg" width=64 alt="pdf"/></a></p>
     {%- endif -%} 
 
+    {% if pub.articlenote %}
+    <h2>Article Note</h2>
+    <p>{{ pub.articlenote }}</p>
+    {%- endif -%} 
+
     {%- if pub.embeddedmovie -%}
     <h2>Movie</h2>
     {{- pub.embeddedmovie -}}
